[gd_scene load_steps=2 format=2]

[ext_resource path="res://Hangman/Hangman.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="LivesLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 56.0
margin_bottom = 38.0
text = "Lives: 0"

[node name="Word" type="Label" parent="."]
margin_left = 141.0
margin_top = 160.0
margin_right = 438.0
margin_bottom = 174.0
text = "Display word here"
align = 1

[node name="GuessBox" type="LineEdit" parent="."]
margin_left = 218.0
margin_top = 204.0
margin_right = 368.0
margin_bottom = 228.0

[node name="PlayAgainButton" type="Button" parent="."]
visible = false
margin_left = 258.0
margin_top = 254.0
margin_right = 335.0
margin_bottom = 274.0
text = "Play Again"
